tests/error/defined_class.gw
#! [contains] already defined
class C{}
class C{}
